--- a/index.htm
+++ b/index.htm
@@ -4,30 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="src/css/index.css">
+  <link rel="stylesheet" href="src/main.css">
   <title>Events.find</title>
 </head>
 <body>
+  <div id="header">
+    
+  </div>
   <div id="root">
-
-    <div class="cards">
-      <!--New events section-->
-      <div id="new-events" class="category">
-        <h2>New Events</h2>
-      </div>
-  
-      <div id="trending-events" class="category">
-        <h2>Trending Events</h2>
-      </div>
-  
-      <div id="upcoming-events" class="category">
-        <h2>Upcoming Events</h2>
-      </div>
-    </div>
 
   </div> <!--this is the root ending-->
 
   <!--linking CSS files-->
-  <script src="src/js/events.js"></script>
+  <script src="src/app.js"></script>
 </body>
 </html>
