cards are modified, notification added

--- a/index.htm
+++ b/index.htm
@@ -17,5 +17,18 @@
 
   <!--linking CSS files-->
   <script src="src/app.js"></script>
+
+
+  <!-- <div class="events">
+    <div class="eventsLayer">
+      <div class="eventCard">
+        <h3 class="title"></h3>
+        <p class="duration"></p>
+        <p class="mode"></p>
+        <p class="tags"></p>
+        <button class="primaryButton" onclick="window.open('');"></button>
+      </div>
+    </div>
+  </div> -->
 </body>
 </html>
